fixed contact-me component to be more responsive on mobile

--- a/src/components/Contactme/contact.css
+++ b/src/components/Contactme/contact.css
@@ -108,15 +108,16 @@
   @media (max-width: 767px) {
     .contact-box {
       width: 100%; 
-      margin-bottom: 10%; 
+      margin-bottom: 60%; 
       flex-direction: column;
-      align-items: center;
+      align-items: center
     }
   
     .contact-info {
       margin-top: 20px;
       border-left: none;
       padding-left: none;
+      margin-right: 60%;
     }
   }
   
